--- a/css/index.css
+++ b/css/index.css
@@ -157,3 +157,13 @@ hr.black {
     color: #E61231 !important;
     font-weight: bold;
 }
+.line_1,
+.line_2,
+.line_3 {
+    width: 25px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    height: 3.7px !important;
+    background-color: #d1cdc7;
+    border-radius: 0.8px
+}
