--- a/css/creative.css
+++ b/css/creative.css
@@ -707,8 +707,8 @@ pre code {
 .col-1 {
   position: relative;
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
 }
 
 .col {
